# electricity_lstm

./: .gitignore  .pre-commit-config.yaml  README.md  bibliography.bib  data_download.py  main.py  main_15.py  main_naive.py  pred_main.py  pyproject.toml  training_log_lstm_stacked_hour.csv  training_log_mse_lstm_naive_hour.csv  training_log_mse_lstm_stacked_hour.csv  trial_main_additive_regu.py
data/: realised_creation_201501010000_202407010000_day.csv
electricity_data/: consumption_forecast_day.csv  consumption_forecast_month.csv  consumption_forecast_week.csv  consumption_forecast_year.csv  consumption_realized_day.csv  consumption_realized_month.csv  consumption_realized_week.csv  consumption_realized_year.csv  creation_forecast_day_ahead_day.csv  creation_forecast_day_ahead_month.csv  creation_forecast_day_ahead_week.csv  creation_forecast_day_ahead_year.csv  creation_forecast_intraday_day.csv  creation_forecast_intraday_hour.csv  creation_forecast_intraday_month.csv  creation_forecast_intraday_quarterhour.csv  creation_forecast_intraday_week.csv  creation_forecast_intraday_year.csv  creation_realized_day.csv  creation_realized_month.csv  creation_realized_week.csv  creation_realized_year.csv  reformat_data.py
model_info/: lstm_naive_hour_best_sequence_length.json  lstm_naive_hour_losses.json  lstm_seq2seq_additive_hour_best_sequence_length.json  lstm_seq2seq_additive_hour_losses.json  lstm_seq2seq_additive_no_regularization_hour_best_sequence_length.json  lstm_seq2seq_additive_no_regularization_hour_losses.json  lstm_stacked_hour_best_sequence_length.json  (+3 more)
(+1503 files in other folders)
