[tool.poetry]
name = "electricity-lstm"
version = "0.1.0"
description = ""
authors = ["lzangari <lucazangari.93@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
jupyterlab = "^4.0.0"
tensorflow = "^2.11.0"


[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
ruff = "^0.0.287"
pre-commit = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "W", "F", "C90"]
ignore = ["E501"]

[tool.pre-commit]
repos = [
    { repo = "https://github.com/astral-sh/ruff", rev = "v0.0.287", hooks = [{ id = "ruff" }] }
]
